--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "history": "^4.7.2",
     "material-ui": "^0.20.1",
     "moment": "^2.22.1",
+    "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
